# bilibili-gachi-bot

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync2hf.yml  sync2hg.yml
app/: main.py
app/bot/: __init__.py  qq_bot.py
app/bot/qq/: bot.py
app/bot/tg/: __init__.py
app/common/: dynamic_binding.py  image_utils.py  storage.py
app/config/: __init__.py  live_binding.py
app/crawler/: __init__.py  bilibili_api_crawler.py  bilibili_dynamic_crawler.py  pywright.py  pywright_clawler.py
app/model/: __init__.py  live_object.py  message.py
app/scheduler/: __init__.py  apscheduler.py  bot_scheduler.py
app/tg/: bot.py
app/util/: __init__.py  sqlalchemy_helper.py
