[project]
name = "bilibili-gachi-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "playwright>=1.56.0",
    "playwright-stealth>=2.0.3",
    "python-telegram-bot>=22.5",
    "setuptools>=82.0.1",
    "tenacity>=9.1.2",
]
